[gd_scene load_steps=2 format=3 uid="uid://hud"]

[ext_resource type="Script" path="res://scripts/HUD.gd" id="1_hud"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_hud")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="FuelLabel" type="Label" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "FUEL"

[node name="FuelBar" type="ProgressBar" parent="Control/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
max_value = 100.0
value = 100.0
show_percentage = false

[node name="HSeparator" type="HSeparator" parent="Control/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="HealthLabel" type="Label" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "INTEGRITY"

[node name="HealthBar" type="ProgressBar" parent="Control/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
max_value = 100.0
value = 100.0
show_percentage = false

[node name="GameOverMenu" type="CenterContainer" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Control/GameOverMenu"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/GameOverMenu/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="MessageLabel" type="Label" parent="Control/GameOverMenu/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "GAME OVER"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="Control/GameOverMenu/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "RESTART MISSION"

[node name="NotificationContainer" type="CenterContainer" parent="Control"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 100.0
offset_bottom = 140.0
grow_horizontal = 2

[node name="Label" type="Label" parent="Control/NotificationContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 24
text = ""

